# HW_10_jango

hw_10_dj/: pyproject.toml
hw_10_dj/hw_10_django/: db.sqlite3  manage.py
hw_10_dj/hw_10_django/hw_10_django/: asgi.py  settings.py  urls.py  wsgi.py
hw_10_dj/hw_10_django/quotes/: models.py  urls.py  utils.py  views.py
hw_10_dj/hw_10_django/quotes/migrations/: 0001_initial.py
hw_10_dj/hw_10_django/quotes/static/quotes/: style.css
hw_10_dj/hw_10_django/quotes/templates/quotes/: base.html  index.html
hw_10_dj/hw_10_django/quotes/templatetags/: extract.py
hw_10_dj/hw_10_django/utils/: add_quotes_to_mongo.py  authors.json  migration.py  qoutes_1.json  test.py
